--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,50 @@
 # ===========================================
-# TMS Production Environment Configuration
-# Copy this to .env and fill in your values
+# TMS Configuratie Template
+# ===========================================
+# Dit bestand wordt automatisch ingevuld door
+# het installatiescript (install.sh).
+#
+# Handmatig gebruiken:
+#   cp .env.example .env
+#   nano .env  (vul waardes in)
+#   docker compose up -d
 # ===========================================
 
-# Domain (without https://)
+# -----------------------------------------
+# DOMEIN
+# -----------------------------------------
+# Je domeinnaam zonder https://
+# Gebruik 'localhost' voor lokaal testen
 DOMAIN_NAME=tms.example.com
 
-# Database
+# -----------------------------------------
+# DATABASE (PostgreSQL)
+# -----------------------------------------
 DB_NAME=tms_db
 DB_USER=tms_user
-DB_PASSWORD=your_secure_password_here
+# Genereer met: openssl rand -base64 24
+DB_PASSWORD=WIJZIG_DIT_WACHTWOORD
 
-# Security - Generate with: python -c "import secrets; print(secrets.token_urlsafe(64))"
-SECRET_KEY=your_secret_key_here
+# -----------------------------------------
+# SECURITY
+# -----------------------------------------
+# Django secret key (verplicht)
+# Genereer met: openssl rand -base64 64
+SECRET_KEY=WIJZIG_DEZE_SECRET_KEY
 
-# Optional: Initial admin account (only used during install)
+# -----------------------------------------
+# ADMIN ACCOUNT (eerste login)
+# -----------------------------------------
 DJANGO_SUPERUSER_EMAIL=admin@example.com
-DJANGO_SUPERUSER_PASSWORD=your_admin_password
+DJANGO_SUPERUSER_PASSWORD=WIJZIG_DIT_WACHTWOORD
 
-# Optional: Email settings
-EMAIL_HOST=smtp.example.com
-EMAIL_PORT=587
-EMAIL_USE_TLS=true
-EMAIL_HOST_USER=your_email@example.com
-EMAIL_HOST_PASSWORD=your_email_password
-DEFAULT_FROM_EMAIL=noreply@example.com
+# -----------------------------------------
+# OPTIONEEL: EMAIL (SMTP)
+# -----------------------------------------
+# Alleen nodig voor wachtwoord reset emails
+# EMAIL_HOST=smtp.example.com
+# EMAIL_PORT=587
+# EMAIL_USE_TLS=true
+# EMAIL_HOST_USER=noreply@example.com
+# EMAIL_HOST_PASSWORD=email_wachtwoord
+# DEFAULT_FROM_EMAIL=TMS <noreply@example.com>
