--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.1.0",
     "axios": "^1.6.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
@@ -21,6 +23,7 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
