--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "jspdf-autotable": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
