--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,16 @@ REDIS_URL=redis://localhost:6379/1
 # CORS (for production)
 CORS_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
+# AI-powered Invoice Extraction (optional but recommended)
+# Option 1: OpenAI Direct
+OPENAI_API_KEY=sk-your-api-key-here
+OPENAI_MODEL=gpt-4o-mini
+
+# Option 2: Azure OpenAI (uncomment and fill if using Azure)
+# AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+# AZURE_OPENAI_API_KEY=your-azure-api-key
+# AZURE_OPENAI_DEPLOYMENT=gpt-4o-mini
+
 # Email (development uses console backend)
 EMAIL_HOST=
 EMAIL_PORT=587
