fix: Add extra_hosts for smtp.office365.com

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,8 @@ services:
     dns:
       - 8.8.8.8
       - 8.8.4.4
+    extra_hosts:
+      - "smtp.office365.com:40.99.149.98"
     environment:
       - DJANGO_SETTINGS_MODULE=tms.settings.production
       - SECRET_KEY=${SECRET_KEY:?Secret key is verplicht}
