--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -68,4 +68,13 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    # Serve media files from shared volume
+    location /media/ {
+        alias /usr/share/nginx/html/media/;
+        expires 7d;
+        add_header Cache-Control "public";
+        # Allow iframe embedding for PDFs
+        add_header X-Frame-Options "" always;
+    }
 }
