--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@heroicons/react": "^2.1.0",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.6.0",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
@@ -23,6 +25,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^6.21.0",
     "recharts": "^3.7.0",
     "zustand": "^4.4.0"
