feat: Admin kan concept uren zien + pagination fix + activity log fix
- Backend: Admin kan nu concept uren van chauffeurs zien in TimeEntryViewSet
- Frontend: Status filter toegevoegd op SubmittedHoursPage (Alle/Concept/Ingediend)
- Fix: SafePageNumberPagination voorkomt 404 bij ongeldige paginanummers
- Fix: User update logging verwijderd uit signals (veroorzaakte phantom activiteit)
- Local dev: VITE_ALLOW_LOCALHOST build arg ondersteund

--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,10 @@ Thumbs.db
 
 # Docker
 docker-compose.override.yml
+docker-compose.local.yml
+
+# Local nginx config
+frontend/nginx.local.conf
 
 # Local scripts
 start-local.ps1
