--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.0",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.6.0",
+    "exceljs": "^4.4.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^4.0.0",
