--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -38,7 +38,7 @@ server {
     # - Images: self, data URIs, HTTPS (for dynamic logos)
     # - Connect: self and any HTTPS (for configurable backend)
     # - Frame ancestors: self only (prevent embedding)
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' https: data:; img-src 'self' data: https: blob:; connect-src 'self' https: wss:; frame-ancestors 'self'; base-uri 'self'; form-action 'self';" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' https: data:; img-src 'self' data: https: blob:; connect-src 'self' https: wss:; frame-src 'self' blob:; frame-ancestors 'self'; base-uri 'self'; form-action 'self';" always;
 
     # Service Worker - no cache, always fresh
     location /sw.js {
